--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   zia-comm:
     build: .
@@ -20,7 +19,6 @@ services:
       start_period: 40s
     networks:
       - zia-network
-    # Resource limits for 1GB RAM VPS
     deploy:
       resources:
         limits:
@@ -30,7 +28,7 @@ services:
 
 networks:
   zia-network:
-    external: true  # Use the same network as backend
+    external: true
 
 volumes:
   logs:
