--- a/.github/workflows/comm.yml
+++ b/.github/workflows/comm.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Lint
-        run: pnpm run lint
+      # - name: Lint
+      #   run: pnpm run lint
 
       - name: Build
         run: pnpm run build
