--- a/.github/workflows/comm.yml
+++ b/.github/workflows/comm.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_REGISTRY }}/zia-comm:latest
+          tags: ${{ secrets.DOCKER_REGISTRY }}/zia-comm:latest | tr '[:upper:]' '[:lower:]'
 
       - name: Deploy to VPS
         if: github.ref == 'refs/heads/main'
