--- a/.github/workflows/comm.yml
+++ b/.github/workflows/comm.yml
@@ -43,13 +43,17 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Set Docker tag
+        id: docker_tag
+        run: echo "tag=$(echo ${{ secrets.DOCKER_REGISTRY }}/zia-comm:latest | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
       - name: Build and push Docker image
         if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_REGISTRY }}/zia-comm:latest | tr '[:upper:]' '[:lower:]'
+          tags: ${{ steps.docker_tag.outputs.tag }}
 
       - name: Deploy to VPS
         if: github.ref == 'refs/heads/main'
