--- a/.github/workflows/comm.yml
+++ b/.github/workflows/comm.yml
@@ -43,17 +43,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Set Docker tag
-        id: docker_tag
-        run: echo "tag=$(echo ${{ secrets.DOCKER_REGISTRY }}/zia-comm:latest | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
-
       - name: Build and push Docker image
         if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ${{ steps.docker_tag.outputs.tag }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/zia-comm:latest
 
       - name: Deploy to VPS
         if: github.ref == 'refs/heads/main'
@@ -64,7 +60,7 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
             cd /var/www/zia-comm
-            docker pull ${{ secrets.DOCKER_REGISTRY }}/zia-comm:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/zia-comm:latest
             docker-compose down
             docker-compose up -d
 
